# qutip-sampler

./: .coverage  AGENTS.md  README.md  pyproject.toml
.claude/: settings.json
.github/workflows/: publish.yml  test.yml
src/qutip_sampler/: __init__.py  composites.py  samplers.py
tests/: test_composites.py  test_samplers.py
