[project]
name = "qutip-sampler"
version = "0.3.0"
description = "Quantum annealing sampler using QuTiP sesolve"
readme = "README.md"
requires-python = ">=3.13"
license = { text = "MIT" }
authors = [
    { name = "shunta0213", email = "contact@sprshunt.com" },
]
keywords = [
    "quantum annealing",
    "quantum computing",
    "qutip",
    "dimod",
    "optimization",
    "ising",
    "qubo",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Physics",
]
dependencies = [
    "dimod>=0.12.21",
    "numpy>=1.22",
    "qutip>=5.2.3",
]

[project.urls]
"Source Code" = "https://github.com/shunta0213/qutip-sampler"
"Bug Tracker" = "https://github.com/shunta0213/qutip-sampler/issues"

[dependency-groups]
dev = [
    "bump-my-version>=1.2.7",
    "dwave-ocean-sdk>=9.3.0",
    "pytest>=9.0.2",
    "pytest-cov>=6.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/qutip_sampler"]

[tool.bumpversion]
current_version = "0.3.0"
commit = true
tag = true

[[tool.bumpversion.files]]
filename = "pyproject.toml"
search = 'version = "{current_version}"'
replace = 'version = "{new_version}"'
